<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.edu.uns.cs.trabajosocialform.FormSolicitanteActivity">

    <TextView
        android:id="@+id/titulo_solicitanteForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_solicitante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- NOMBRE -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/panel_nombres_solicitante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titulo_solicitanteForm" >

        <EditText
            android:id="@+id/nombres_solicitante_form_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/nombres_solicitante_form_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/nombres_solicitante"
            app:layout_constraintBaseline_toBaselineOf="@+id/nombres_solicitante_form_et"
            app:layout_constraintEnd_toStartOf="@+id/nombres_solicitante_form_et"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout >

    <!-- APELLIDO -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/panel_apellidos_solicitante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/panel_nombres_solicitante" >

        <EditText
            android:id="@+id/apellidos_solicitante_form_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/apellidos_solicitante_form_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellidos_solicitante"
            app:layout_constraintBaseline_toBaselineOf="@+id/apellidos_solicitante_form_et"
            app:layout_constraintEnd_toStartOf="@+id/apellidos_solicitante_form_et"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <!-- CUIL -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/panel_cuil_solicitante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/panel_apellidos_solicitante" >

        <EditText
            android:id="@+id/cuil_solicitante_form_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/cuil_solicitante_form_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuil_solicitante"
            app:layout_constraintBaseline_toBaselineOf="@+id/cuil_solicitante_form_et"
            app:layout_constraintEnd_toStartOf="@+id/cuil_solicitante_form_et"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <!-- TELEFONO PRINCIPAL -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/panel_telefono_principal_solicitante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/panel_cuil_solicitante">

        <EditText
            android:id="@+id/telefonoPrincipal_solicitante_form_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/telefonoPrincipal_solicitante_form_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono_principal_solicitante"
            app:layout_constraintBaseline_toBaselineOf="@+id/telefonoPrincipal_solicitante_form_et"
            app:layout_constraintEnd_toStartOf="@+id/telefonoPrincipal_solicitante_form_et"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <!-- OTRO TELEFONO -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/panel_otro_telefono_solicitante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/panel_telefono_principal_solicitante">

        <EditText
            android:id="@+id/otroTelefono_solicitante_form_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/otroTelefono_solicitante_form_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otro_telefono_solicitante"
            app:layout_constraintBaseline_toBaselineOf="@+id/otroTelefono_solicitante_form_et"
            app:layout_constraintEnd_toStartOf="@+id/otroTelefono_solicitante_form_et"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/siguiente_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="continuar"
        android:text="Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
